--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Laiba Khan | Developer Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -194,95 +194,89 @@
       </div>
     </section>
 
-   <section id="projects" class="section">
-  <div class="container reveal">
-    <div class="section-heading">
-      <span class="section-tag">My Work</span>
-      <h2>Projects</h2>
-      <p>Projects demonstrating my abilities with HTML, CSS, and JavaScript.</p>
-    </div>
-
-    <div class="projects-grid">
-
-      <!-- Project 01 (Previously 03) -->
-      <article class="project-card" data-tilt>
-        <div class="project-number">01</div>
-        <h3>Tic-Tac-Toe Game</h3>
-        <p>
-          A classic 3x3 tic-tac-toe game where two players can play on the same device.
-        </p>
-        <ul>
-          <li>Handles player turns (X and O)</li>
-          <li>Checks wins and draws automatically</li>
-          <li>Simple responsive layout</li>
-        </ul>
-        <div class="project-tech">
-          <span>HTML</span>
-          <span>CSS</span>
-          <span>JavaScript</span>
+    <section id="projects" class="section">
+      <div class="container reveal">
+        <div class="section-heading">
+          <span class="section-tag">My Work</span>
+          <h2>Projects</h2>
+          <p>Projects demonstrating my abilities with HTML, CSS, and JavaScript.</p>
         </div>
-        <div class="project-links">
-          <a href="https://faizan-06.github.io/TicTacToe2/" class="project-btn" target="_blank" rel="noopener noreferrer">
-            <span>Live Demo</span>
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg>
-          </a>
-        </div>
-      </article>
 
-      <!-- Project 02 (Previously 01) -->
-      <article class="project-card" data-tilt>
-        <div class="project-number">02</div>
-        <h3>Responsive Landing Page</h3>
-        <p>
-          A clean navigation bar that stays at the top of the page and reacts when you scroll or hover.
-        </p>
-        <ul>
-          <li>Fixed navbar visible on every section</li>
-          <li>Changes style and color on scroll</li>
-          <li>Hover effects for better feedback</li>
-        </ul>
-        <div class="project-tech">
-          <span>HTML</span>
-          <span>CSS</span>
-          <span>JavaScript</span>
-        </div>
-        <div class="project-links">
-          <a href="https://faizan-06.github.io/Website2/" class="project-btn" target="_blank" rel="noopener noreferrer">
-            <span>Live Demo</span>
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg>
-          </a>
-        </div>
-      </article>
+        <div class="projects-grid">
+          <article class="project-card" data-tilt>
+            <div class="project-number">01</div>
+            <h3>Tic-Tac-Toe Game</h3>
+            <p>
+              A classic 3x3 tic-tac-toe game where two players can play on the same device.
+            </p>
+            <ul>
+              <li>Handles player turns (X and O)</li>
+              <li>Checks wins and draws automatically</li>
+              <li>Simple responsive layout</li>
+            </ul>
+            <div class="project-tech">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <div class="project-links">
+              <a href="https://faizan-06.github.io/TicTacToe2/" class="project-btn" target="_blank" rel="noopener noreferrer">
+                <span>Live Demo</span>
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg>
+              </a>
+            </div>
+          </article>
 
-      <!-- Project 03 (Previously 02) -->
-      <article class="project-card" data-tilt>
-        <div class="project-number">03</div>
-        <h3>Stopwatch Web App</h3>
-        <p>
-          A simple stopwatch that lets users measure time and record laps directly in the browser.
-        </p>
-        <ul>
-          <li>Start, pause and reset buttons</li>
-          <li>Lap feature to save intervals</li>
-          <li>Clean minimal interface</li>
-        </ul>
-        <div class="project-tech">
-          <span>HTML</span>
-          <span>CSS</span>
-          <span>JavaScript</span>
-        </div>
-        <div class="project-links">
-          <a href="https://faizan-06.github.io/Stopwatch2/" class="project-btn" target="_blank" rel="noopener noreferrer">
-            <span>Live Demo</span>
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg>
-          </a>
-        </div>
-      </article>
+          <article class="project-card" data-tilt>
+            <div class="project-number">02</div>
+            <h3>Responsive Landing Page</h3>
+            <p>
+              A clean navigation bar that stays at the top of the page and reacts when you scroll or hover.
+            </p>
+            <ul>
+              <li>Fixed navbar visible on every section</li>
+              <li>Changes style and color on scroll</li>
+              <li>Hover effects for better feedback</li>
+            </ul>
+            <div class="project-tech">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <div class="project-links">
+              <a href="https://faizan-06.github.io/Website2/" class="project-btn" target="_blank" rel="noopener noreferrer">
+                <span>Live Demo</span>
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg>
+              </a>
+            </div>
+          </article>
 
-    </div>
-  </div>
-</section>
-
+          <article class="project-card" data-tilt>
+            <div class="project-number">03</div>
+            <h3>Stopwatch Web App</h3>
+            <p>
+              A simple stopwatch that lets users measure time and record laps directly in the browser.
+            </p>
+            <ul>
+              <li>Start, pause and reset buttons</li>
+              <li>Lap feature to save intervals</li>
+              <li>Clean minimal interface</li>
+            </ul>
+            <div class="project-tech">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <div class="project-links">
+              <a href="https://faizan-06.github.io/Stopwatch2/" class="project-btn" target="_blank" rel="noopener noreferrer">
+                <span>Live Demo</span>
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg>
+              </a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
 
     <section id="contact" class="section alt">
       <div class="container contact-inner reveal">
