--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
 
           <article class="project-card" data-tilt>
             <div class="project-number">02</div>
-            <h3>Responsive Landing Page</h3>
+            <h3>Responsive Landing</h3>
+            <h3>Page</h3>
             <p>
               A clean navigation bar that stays at the top of the page and reacts when you scroll or hover.
             </p>
