--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@
   <footer class="footer">
     <div class="container footer-inner">
       <p>© <span id="year"></span> Laiba Khan. All rights reserved.</p>
-      <p class="footer-tagline">Created with heart, perfected with code ❤️</p>
+      <p class="footer-tagline">Created with heart, perfected with code </p>
+      <p class="footer-tagline">❤️</p>
     </div>
   </footer>
 
