--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <span>JavaScript</span>
             </div>
             <div class="project-links">
-              <a href="https://faizan-06.github.io/TicTacToe2/" class="project-btn" target="_blank" rel="noopener noreferrer">
+              <a href="https://bytebylaiba.github.io/PRODIGY_WD_03/" class="project-btn" target="_blank" rel="noopener noreferrer">
                 <span>Live Demo</span>
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg>
               </a>
